--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.liquibase.change-log=classpath:liquibase/changelog.yml
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/my_db?useSSL=false
-spring.datasource.username=bestuser
-spring.datasource.password=bestuser
+spring.datasource.url=
+spring.datasource.username=
+spring.datasource.password=
